# OmAlg

./: AutomatonToOmegaSemigroup.cpp  BuechiToOmegaSemigroup.cpp  CMakeLists.txt  OmegaSemigroupLandweberHierarchy.cpp  OmegaSemigroupToCoBuechi.cpp  OmegaSemigroupToDetBuechi.cpp  OmegaSemigroupToParity.cpp  OmegaSemigroupToWeakBuechi.cpp  README.md  ReduceOmegaSemigroup.cpp  license.txt  makefile
OptParser/: OptParser.cpp  OptParser.h  OptParserExceptions.h
Util/: dasDull_Util.cpp  dasDull_Util.h  dasDull_Util.tcc
examples/: A1.txt  A2.txt  A3.txt  S1.txt  S2.txt  examples.txt
include/: AutomatonConverter.h  BuechiAutomaton.h  DBTransitionProfile.h  DeterministicBuechiAutomaton.h  DeterministicOmegaAutomaton.h  GeneralException.h  IOHandler.h  IOHandlerExceptions.h  Morphism.h  NBTransitionProfile.h  Node.h  NondeterministicBuechiAutomaton.h  NondeterministicOmegaAutomaton.h  OmegaAutomaton.h  OmegaSemigroup.h  Semigroup.h  TransformToOmegaSemigroup.tcc  TransitionRelation.h  UnionFind.h  dasDull_Util.h  dasDull_Util.tcc
include/Automata/: BuechiAutomaton.h  CoBuechiAutomaton.h  DeterministicBuechiAutomaton.h  DeterministicCoBuechiAutomaton.h  DeterministicMullerAutomaton.h  DeterministicOmegaAutomaton.h  DeterministicParityAutomaton.h  MullerAutomaton.h  NondeterministicBuechiAutomaton.h  NondeterministicCoBuechiAutomaton.h  NondeterministicMullerAutomaton.h  NondeterministicOmegaAutomaton.h  NondeterministicParityAutomaton.h  OmegaAutomaton.h  ParityAutomaton.h
include/TransitionProfiles/: DBTransitionProfile.h  DCTransitionProfile.h  DMTransitionProfile.h  DPTransitionProfile.h  NBTransitionProfile.h  NCTransitionProfile.h  NMTransitionProfile.h  NPTransitionProfile.h  TransitionProfile.h
src/: AutomatonConverter.cpp  BuechiAutomaton.cpp  DeterministicBuechiAutomaton.cpp  DeterministicOmegaAutomaton.cpp  IOHandler.cpp  Morphism.cpp  NondeterministicBuechiAutomaton.cpp  NondeterministicOmegaAutomaton.cpp  OmegaAutomaton.cpp  OmegaSemigroup.cpp  Semigroup.cpp  TransitionRelation.cpp
src/Automata/: BuechiAutomaton.cpp  CoBuechiAutomaton.cpp  DeterministicCoBuechiAutomaton.cpp  DeterministicMullerAutomaton.cpp  DeterministicOmegaAutomaton.cpp  DeterministicParityAutomaton.cpp  MullerAutomaton.cpp  NondeterministicCoBuechiAutomaton.cpp  NondeterministicMullerAutomaton.cpp  NondeterministicOmegaAutomaton.cpp  NondeterministicParityAutomaton.cpp  OmegaAutomaton.cpp  ParityAutomaton.cpp
vanHavel/: UnionFind.cpp  UnionFind.h  vanHavel_Util.cpp  vanHavel_Util.h  vanHavel_Util.tcc
